--- a/TP3/TP3_FoIL_public.ipynb
+++ b/TP3/TP3_FoIL_public.ipynb
@@ -672,89 +672,8 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 10,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "array([0.        , 2.78196237, 2.31852546, 3.04684747, 1.57941016,\n",
-              "       0.85620482, 2.09006201, 2.4052052 , 0.24313741, 1.75529371,\n",
-              "       1.79542263, 1.63963646, 1.20452312, 2.75532681, 2.48290475,\n",
-              "       3.77448769, 1.26727621, 1.12442649, 1.81260272, 1.97669749,\n",
-              "       2.26779725, 0.48111264, 1.91265946, 2.29676117, 1.47898495,\n",
-              "       0.9702285 , 0.97993856, 2.86190606, 1.43319442, 1.18319845,\n",
-              "       2.34807281, 0.92117058, 0.64143645, 1.67858638, 2.68413419,\n",
-              "       2.43930015, 1.57792171, 1.46947523, 0.92222517, 1.97117385,\n",
-              "       1.55721477, 1.36238155, 2.73977996, 1.91029662, 2.17144541,\n",
-              "       1.84761521, 0.42200531, 1.61142275, 0.95999052, 0.86854939,\n",
-              "       0.76131103, 1.28028658, 3.14175857, 2.70226525, 1.43108308,\n",
-              "       2.15230886, 1.98435111, 2.89635006, 1.28653618, 1.0370014 ,\n",
-              "       0.96414546, 0.87695321, 1.5637349 , 3.13913164, 1.12870702,\n",
-              "       3.42640188, 2.8298022 , 0.74529209, 2.90697609, 1.16440803,\n",
-              "       2.16981578, 1.85384793, 1.61879606, 0.85372431, 1.01125534,\n",
-              "       3.13601245, 1.86965637, 1.66297078, 0.51346095, 2.59900643,\n",
-              "       1.36055323, 1.25819946, 0.59608335, 0.78894411, 1.33191386,\n",
-              "       1.96739344, 1.70041997, 1.13562339, 0.41720472, 1.70363549,\n",
-              "       0.18571218, 1.17034858, 0.80158977, 1.57469064, 0.40137411,\n",
-              "       2.47713187, 1.8003951 , 0.50598993, 2.19849828, 2.86921656,\n",
-              "       3.11770633, 2.83273417, 2.65640199, 1.3499883 , 3.74469452,\n",
-              "       3.40311635, 2.13468965, 3.08982937, 2.40987735, 2.67178894,\n",
-              "       2.36525086, 4.70473533, 3.42620007, 3.94327506, 2.06332973,\n",
-              "       4.1296546 , 2.8940816 , 2.58791907, 1.62139654, 4.14805771,\n",
-              "       2.3273401 , 1.82675819, 3.23793306, 1.98878411, 1.98750698,\n",
-              "       1.9406841 , 2.55004615, 2.76560273, 2.58050089, 4.18175386,\n",
-              "       4.41762171, 1.80121261, 1.97268049, 3.49094678, 4.24040642,\n",
-              "       1.81193685, 1.90876848, 1.83282773, 3.76272796, 3.90658638,\n",
-              "       4.22922716, 1.87768103, 3.18975754, 1.93253625, 2.64006844,\n",
-              "       2.69327222, 3.42577601, 4.1716572 , 2.08841512, 3.96106588,\n",
-              "       2.11394004, 3.909222  , 3.00839311, 3.76814919, 3.85084034,\n",
-              "       1.53799972, 2.12539496, 2.94228212, 2.06229588, 3.79690588,\n",
-              "       3.65535304, 2.65924856, 1.12275235, 2.84581671, 3.71603137,\n",
-              "       3.51209555, 1.73994652, 2.53861037, 2.56445268, 2.74987156,\n",
-              "       3.26509549, 1.61636657, 3.23211699, 2.5029474 , 4.85152953,\n",
-              "       2.91398706, 3.54378308, 2.39582052, 3.69506438, 3.13489935,\n",
-              "       3.06946665, 3.20079241, 1.38993523, 1.50517282, 3.65823391,\n",
-              "       1.32722218, 3.30606983, 4.78961649, 4.53464523, 3.01891393,\n",
-              "       2.88471469, 1.54291804, 2.79685343, 1.75831312, 3.32692131,\n",
-              "       4.40825461, 2.6662098 , 2.86765403, 2.89960049, 3.43120848])"
-            ]
-          },
-          "execution_count": 10,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
       "source": [
-        "distances[:, 0]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 11,
-      "metadata": {
-        "id": "PXTGjSBI8ycw"
-      },
-      "outputs": [],
-      "source": [
-        "def knn(X, y, k):\n",
-        "    n_samples = len(y)\n",
-        "    distances = cdist(X, X)\n",
-        "    estimate = np.zeros(n_samples)\n",
-        "    \n",
-        "    # For each sample in the training set...\n",
-        "    for i in range(n_samples):\n",
-        "        # Look up k closest samples\n",
-        "        nns = np.argpartition(distances[:, i], k)[:k]\n",
-        "        \n",
-        "        # Assign estimate as a majority vote\n",
-        "        estimate[i] = int(sum(y[nns] == 1) > sum(y[nns] == 0))\n",
-        "\n",
-        "    return estimate\n"
+        "#def knn(X, y, k):"
       ]
     },
     {
