--- a/TP1/FoIL_ex1.ipynb
+++ b/TP1/FoIL_ex1.ipynb
@@ -1065,7 +1065,7 @@
     "id": "L4LMkig3kZtm"
    },
    "source": [
-    "In these dats, the different columns correspond to different $\\textbf{features}$, many of these are useless for our goals since we are interested just in the age of the person and how she/he voted. The line corresponds to all the people that were interviewed.  The code for this two features are respectively \"cut15\" and \"numage\", let's focus on them and change the nomenclature for having a new nice-looking dataframe.\n",
+    "In these data, the different columns correspond to different $\\textbf{features}$, many of these are useless for our goals since we are interested just in the age of the person and how she/he voted. The line corresponds to all the people that were interviewed.  The code for this two features are respectively \"cut15\" and \"numage\", let's focus on them and change the nomenclature for having a new nice-looking dataframe.\n",
     "\n",
     "\n"
    ]
