--- a/TP2/lighthouse.ipynb
+++ b/TP2/lighthouse.ipynb
@@ -1671,7 +1671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1686,7 +1686,7 @@
     }
    ],
    "source": [
-    "# 3D log-likelihood surface (as in earlier cells)\n",
+    "# 3D log-likelihood surface \n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
     "x0_true_est = res_mle.x[0]\n",
@@ -1767,7 +1767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1782,7 +1782,7 @@
     }
    ],
    "source": [
-    "# Bootstrap CIs (same as before)\n",
+    "# Bootstrap CIs \n",
     "from numpy.random import choice\n",
     "\n",
     "B = 200\n",
