--- a/HW2/hw2_practice.ipynb
+++ b/HW2/hw2_practice.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WARNING: Before running the following cell, generate the data by running the file \"dataset_preprocessing.py\". Make sure that the data that you generated are in the same folder of this notebook. If you are using colab (not advised for this homework), import the python files and run it from here."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
