--- a/TP9/[exercise]torch_and_neuralnets.ipynb
+++ b/TP9/[exercise]torch_and_neuralnets.ipynb
@@ -187,7 +187,6 @@
     "c = torch.log(a @ b).sum()\n",
     "print(\"c\", c)\n",
     "print(\"c.shape:\", c.shape)\n",
-    "print()\n",
     "\n",
     "# We ask to perform backpropagation\n",
     "c.backward()\n",
@@ -330,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now initialize your model and compute the gradients with resect to the MSE loss"
+    "Now initialize your model and compute the gradients with respect to the MSE loss"
    ]
   },
   {
@@ -387,7 +386,7 @@
    "metadata": {},
    "source": [
     "The `nn.Sequential` module stacks the given layer one after the other.\n",
-    "Still, to get more control on the forward, is better to stick to self-defined module"
+    "Still, to get more control on the forward, it is better to stick to self-defined module"
    ]
   },
   {
@@ -478,9 +477,6 @@
     "])\n",
     "\n",
     "# load the train dataset\n",
-    "# Hint: look at\n",
-    "# 1. https://pytorch.org/tutorials/beginner/basics/data_tutorial.html\n",
-    "# 2. https://pytorch.org/vision/stable/datasets.html\n",
     "train_dataset = torchvision.datasets.MNIST(\n",
     "    root='./data/',\n",
     "    train=True,\n",
@@ -531,7 +527,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# construct the dataloader for the traininig dataset.\n",
+    "# Construct the dataloader for the training dataset.\n",
     "# Here we shuffle the data to promote stochasticity.\n",
     "train_dataloader = torch.utils.data.DataLoader(\n",
     "    dataset=train_dataset,\n",
@@ -564,7 +560,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "# Get the first 10 images of the train dataset. Hint: use next(), iter()\n",
+    "# Get the first 10 images of the train dataset.\n",
     "images = next(iter(train_dataloader))[0][:10]\n",
     "grid = torchvision.utils.make_grid(images, nrow=5, padding=10)\n",
     "\n",
@@ -610,8 +606,8 @@
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        # ***************************************************\n",
     "        # INSERT YOUR CODE HERE\n",
-    "        # You should (a) transform the a size that is readable\n",
-    "        # by the MLP and (b) pass the the input x successively\n",
+    "        # You should (a) transform the input to a size that is readable\n",
+    "        # by the MLP and (b) pass the input x successively\n",
     "        # through the layers.\n",
     "        # ***************************************************\n",
     "        # transform the image to a vector\n",
@@ -632,7 +628,6 @@
     "model = model.to(DEVICE)\n",
     "\n",
     "# define the optimizer\n",
-    "# Hint: https://pytorch.org/docs/stable/optim.html\n",
     "optimizer = optim.SGD(model.parameters(), lr=LEARNING_RATE)"
    ]
   },
@@ -659,8 +654,8 @@
     "    ):\n",
     "    '''\n",
     "    This function implements the core components of any Neural Network training regiment.\n",
-    "    In our stochastic setting our code follows a very specific \"path\". First, we load the batch\n",
-    "    a single batch and zero the optimizer. Then we perform the forward pass, compute the gradients and perform the backward pass. And ...repeat!\n",
+    "    In our stochastic setting our code follows a very specific \"path\". First, we load a single batch and zero the optimizer. \n",
+    "    Then we perform the forward pass, compute the gradients and perform the backward pass. And ...repeat!\n",
     "    '''\n",
     "\n",
     "    running_loss = 0.0\n",
@@ -766,7 +761,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# train for 10 epochs\n",
+    "# train for 20 epochs\n",
     "losses = fit(\n",
     "    model=model,\n",
     "    train_dataloader=train_dataloader,\n",
@@ -825,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice that the MLP does not take into account the nature of images: close pixels convey local information that is important. Using an MLP, we do not have the notion of the \"pixel neighbourhood\". We, therefore, neglect important information with an MLP. There are however models better suited for vision problems, such as Convolutional Neural Networks or CNNs.\n",
+    "Notice that the MLP does not take into account the nature of images: close pixels convey local information that is important. Using an MLP, we do not have the notion of the \"pixel neighbourhood\". Therefore, we neglect important information with an MLP. However, there are models better suited for vision problems, such as Convolutional Neural Networks or CNNs.\n",
     "\n",
     "With the code structure we have created, we can simply define a CNN and test its performance quickly."
    ]
