--- a/TP9/[exercise]torch_and_neuralnets.ipynb
+++ b/TP9/[exercise]torch_and_neuralnets.ipynb
@@ -211,7 +211,7 @@
     "def sigmoid(t) -> torch.FloatTensor:\n",
     "    \"\"\"apply sigmoid function on t.\"\"\"\n",
     "    #vvvvv YOUR CODE HERE vvvvv#˙\n",
-    "\n",
+    "    return 1.0 / (1 + torch.exp(-t))\n",
     "    #^^^^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "\n",
     "def mlp(\n",
@@ -228,7 +228,10 @@
     "        torch.Tensor: Network output\n",
     "    \"\"\"\n",
     "    #vvvvv YOUR CODE HERE vvvvv#\n",
-    "\n",
+    "    z_1 = w_1.T @ x\n",
+    "    x_1 = sigmoid(z_1)\n",
+    "    z_2 = w_2.T @ x_1\n",
+    "    y_hat = sigmoid(z_2)\n",
     "    #^^^^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "\n",
     "    return y_hat\n"
@@ -250,11 +253,15 @@
     "#vvvvv YOUR CODE HERE vvvvv#\n",
     "\n",
     "# Convert arrays to tensors. Mind that we will ask for parameters gradients!\n",
-    "w_1 =\n",
-    "w_2 =\n",
+    "x = torch.tensor(x_np)\n",
+    "w_1 = torch.tensor(w_1_np, requires_grad=True)\n",
+    "w_2 = torch.tensor(w_2_np, requires_grad=True)\n",
+    "\n",
+    "y_hat = mlp(x, w_1, w_2)\n",
+    "loss = 0.5 * (y - y_hat)**2\n",
     "\n",
     "#Now perform backpropagation\n",
-    "\n",
+    "loss.backward()\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "\n",
     "print(np.allclose(w_1.grad.numpy(), dw_1_np))\n",
@@ -284,12 +291,24 @@
     "class MLP(torch.nn.Module):\n",
     "    def __init__(self, dim_in: int, dim_hidden: int) -> None:\n",
     "        #vvvvv YOUR CODE HERE vvvvv#\n",
+    "        super().__init__()\n",
     "\n",
+    "        self.w_1 = torch.nn.Parameter(\n",
+    "            torch.randn((dim_in, dim_hidden)),\n",
+    "            requires_grad=True,\n",
+    "        )\n",
+    "        self.w_2 = torch.nn.Parameter(\n",
+    "            torch.randn((dim_hidden, 1)),\n",
+    "            requires_grad=True,\n",
+    "        )\n",
     "        #^^^^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "\n",
     "    def forward(self, x: torch.Tensor) -> torch.Tensor:\n",
     "        #vvvvv YOUR CODE HERE vvvvv#\n",
-    "\n",
+    "        z_1 = self.w_1.T @ x\n",
+    "        x_1 = z_1.sigmoid()  # Let's use PyTorch built-in sigmoid!\n",
+    "        z_2 = self.w_2.T @ x_1\n",
+    "        return z_2.sigmoid()\n",
     "        #^^^^^^^^^^^^^^^^^^^^^^^^^^#"
    ]
   },
@@ -346,6 +365,14 @@
     "\n",
     "#vvvvv YOUR CODE HERE vvvvv#\n",
     "\n",
+    "my_mlp = MyMLP(DIM_IN, DIM_HIDDEN)\n",
+    "print(my_mlp)\n",
+    "\n",
+    "loss = nn.MSELoss()\n",
+    "\n",
+    "# Backpropagate\n",
+    "\n",
+    "loss(y, my_mlp(x)).backward()\n",
     "\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^^^^#"
    ]
@@ -369,7 +396,15 @@
     "#vvvvv YOUR CODE HERE vvvvv#\n",
     "\n",
     "# Note that we have multiple ways to retrieve the parameters\n",
+    "#\n",
+    "# This one works for the MyMLP module define above, but different modules will\n",
+    "# have other submodules and parameter names\n",
     "\n",
+    "gw_1 = my_mlp.linear1.get_parameter('weight')\n",
+    "gw_2 = my_mlp.linear2.get_parameter('weight')\n",
+    "\n",
+    "print(gw_1.shape)\n",
+    "print(gw_2.shape)\n",
     "\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^^^^#"
    ]
@@ -611,8 +646,14 @@
     "        # through the layers.\n",
     "        # ***************************************************\n",
     "        # transform the image to a vector\n",
+    "        batch_size = x.shape[0]\n",
+    "        x = x.view(batch_size, -1)\n",
     "\n",
-    "        return output\n"
+    "        # pass the vectored image through the layers\n",
+    "        x = self.fc1(x)\n",
+    "        x = self.relu(x)\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n"
    ]
   },
   {
