Correct evaluated part

--- a/TP10/training_a_big_network.ipynb
+++ b/TP10/training_a_big_network.ipynb
@@ -1397,15 +1397,15 @@
     "optimizer = torch.optim.Adam(model.parameters(), lr=0.01)\n",
     "\n",
     "# train the ResNet\n",
-    "plot_loss(\n",
-    "    fit(\n",
+    "\n",
+    "train_losses, valid_losses, valid_accs =   fit(\n",
     "        model,\n",
     "        train_dataloader = train_dataloader,\n",
     "        optimizer = optimizer,\n",
-    "        epochs = 3,\n",
+    "        epochs = 35,\n",
     "        device = DEVICE\n",
     "    )\n",
-    ")\n",
+    "plot_loss( train_losses )\n",
     "\n",
     "# predict with the trained model\n",
     "predict(\n",
