Small fix of TP11

--- a/TP11/unsupervised_learning_PCA.ipynb
+++ b/TP11/unsupervised_learning_PCA.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_This excercise relies heavily on an example taken from the Python Data Science Handbook, by Jake VanderPlas_"
+    "_This exercise relies heavily on an example taken from the Python Data Science Handbook, by Jake VanderPlas_"
    ]
   },
   {
@@ -240,7 +240,7 @@
     "                    shrinkA=0, shrinkB=0)\n",
     "    ax.annotate('', v1, v0, arrowprops=arrowprops)\n",
     "\n",
-    "plt.figure(figsize=(14,7))\n",
+    "plt.figure(figsize=(9,7))\n",
     "plt.scatter(X[:, 0], X[:, 1], alpha=0.5)\n",
     "for length, vector in zip(pca.explained_variance_, pca.components_):\n",
     "    v = vector * 3 * np.sqrt(length)\n",
@@ -340,7 +340,7 @@
    "outputs": [],
    "source": [
     "X_new = pca.inverse_transform(X_pca)\n",
-    "plt.figure(figsize=(14,7))\n",
+    "plt.figure(figsize=(9,7))\n",
     "plt.scatter(X[:, 0], X[:, 1], alpha=0.5)\n",
     "plt.scatter(X_new[:, 0], X_new[:, 1], alpha=0.8)"
    ]
