Add solution to TP9

--- a/TP9/[solution]torch_and_neuralnets.ipynb
+++ b/TP9/[solution]torch_and_neuralnets.ipynb
@@ -857,7 +857,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercise 4: CNN"
+    "## Exercise 4: CNN\n",
+    "\n",
+    "## Evaluated Part"
    ]
   },
   {
