--- a/TP12/Diffusion_exercice.ipynb
+++ b/TP12/Diffusion_exercice.ipynb
@@ -24,10 +24,6 @@
     "Therefore, we are going to focus on a simpler dataset that you might be familiar with: **MNIST**.  \n",
     "Here, the distribution $P_{\\rm real}$ corresponds to the distribution of handwritten digits that we want to sample from.\n",
     "\n",
-    "How diffusion models carry out this sampling?\n",
-    "\n",
-    "> ''A diffusion model gradually destroys an image with noise, then learns to reverse the process.''\n",
-    "\n",
     "We will follow the usual procedure of diffusion models that we will explain on the way. Let us start with some introductory work.\n",
     "\n",
     "## Import data"
@@ -1473,7 +1469,7 @@
     "# d1 = layers.Conv2D(256, 3, padding=\"same\", activation=\"swish\")(d1)\n",
     "# d1 = layers.Conv2D(256, 3, padding=\"same\", activation=\"swish\")(d1)\n",
     "\n",
-    "# # --- Output : x0_hat en [-1,1] ---\n",
+    "# # --- Output : x0_hat in [-1,1] ---\n",
     "# out = layers.Conv2D(1, 3, padding=\"same\", activation=None)(d1)\n",
     "\n",
     "# model_diff = models.Model(inp, out)\n",
