--- a/TP12/Diffusion_exercice.ipynb
+++ b/TP12/Diffusion_exercice.ipynb
@@ -315,11 +315,11 @@
     "from keras import layers, models, optimizers\n",
     "\n",
     "model = models.Sequential([\n",
-    "    layers.Input(shape=(28, 28, 2)),                 # 1 canal image + 1 canal σ\n",
+    "    layers.Input(shape=(28, 28, 2)),                 # 1 image channel + 1 σ channel\n",
     "    layers.Conv2D(32, 3, padding=\"same\", activation=\"relu\"),\n",
     "    layers.Conv2D(64, 3, padding=\"same\", activation=\"relu\"),\n",
     "    layers.Conv2D(32, 3, padding=\"same\", activation=\"relu\"),\n",
-    "    layers.Conv2D(1,  3, padding=\"same\", activation=\"sigmoid\")  # sortie en [0,1]\n",
+    "    layers.Conv2D(1,  3, padding=\"same\", activation=\"sigmoid\")  # output in [0,1]\n",
     "])\n",
     "\n",
     "model.compile(optimizer=optimizers.Adam(2e-4), loss=\"mse\")\n",
@@ -847,42 +847,44 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "q2RdQRzsDa01"
-   },
+   "metadata": {},
    "source": [
     "## Deterministic reverse process\n",
     "\n",
     "Once the denoiser is trained, we can use it to run the diffusion process backwards.  \n",
     "Recall that the forward noising step was defined as\n",
     "$$\n",
-    "\\mathbf{x}_{{\\rm noisy},\\, i}(t)\n",
-    "= a(t)\\,\\mathbf{x}_{{\\rm real},\\, i} + b(t)\\,\\boldsymbol{\\varepsilon}_i.\n",
+    "\\mathbf{x}_t\n",
+    "= \\sqrt{\\bar{\\alpha}_t}\\,\\mathbf{x}_0\n",
+    "\\;+\\;\n",
+    "\\sqrt{1-\\bar{\\alpha}_t}\\,\\boldsymbol{\\varepsilon}.\n",
     "$$\n",
-    "At time $t$, the image contains a fraction $a(t)$ of the original signal and a fraction $b(t)$ of noise.\n",
     "\n",
-    "In the deterministic reverse process, we start from pure noise at $t=T$ and move backwards to $t=0$ by repeatedly applying the CNN.  \n",
-    "For each step, the model receives the current noisy image $\\mathbf{x}_t$ together with its time embedding $\\phi(t)$, and it predicts an estimate of the original clean image:\n",
+    "In the deterministic reverse process, we start from pure noise at $t=T$ and move backwards to $t=0$.  \n",
+    "At each step, the model receives the current noisy image $\\mathbf{x}_t$ together with its time embedding $\\phi(t)$, and predicts an estimate of the clean image:\n",
     "$$\n",
     "\\widehat{\\mathbf{x}}_0 = \\mathbf{f}_{\\mathbf{w}}(\\mathbf{x}_t , \\phi(t)).\n",
     "$$\n",
     "\n",
-    "From this estimate, we can reconstruct the next point $\\mathbf{x}_{t-1}$.  \n",
-    "In practice, the reverse step simply reuses the same interpolation structure as in the forward direction, but evaluated at $t-1$:\n",
+    "With this estimate, we recover first the effective noise:\n",
+    "$$\n",
+    "\\widehat{\\boldsymbol{\\varepsilon}}_t\n",
+    "=\n",
+    "\\frac{\\mathbf{x}_t - \\sqrt{\\bar{\\alpha}_t}\\,\\widehat{\\mathbf{x}}_0}\n",
+    "     {\\sqrt{\\,1-\\bar{\\alpha}_t\\,}}.\n",
+    "$$\n",
+    "\n",
+    "Secondly, we use the estimates $\\widehat{\\mathbf{x}}_0$ and $\\widehat{\\boldsymbol{\\varepsilon}}_t$ but evaluated at $t-1$:\n",
     "$$\n",
     "\\mathbf{x}_{t-1}\n",
-    "= a(t-1)\\,\\widehat{\\mathbf{x}}_0 \\;+\\; b(t-1)\\,\\widehat{\\boldsymbol{\\varepsilon}}_t,\n",
-    "$$\n",
-    "where the effective noise $\\widehat{\\boldsymbol{\\varepsilon}}_t$ is obtained from the identity\n",
-    "$$\n",
-    "\\mathbf{x}_t = a(t)\\,\\widehat{\\mathbf{x}}_0 + b(t)\\,\\widehat{\\boldsymbol{\\varepsilon}}_t.\n",
+    "=\n",
+    "\\sqrt{\\bar{\\alpha}_{t-1}}\\,\\widehat{\\mathbf{x}}_0\n",
+    "\\;+\\;\n",
+    "\\sqrt{1-\\bar{\\alpha}_{t-1}}\\,\\widehat{\\boldsymbol{\\varepsilon}}_t.\n",
     "$$\n",
     "\n",
-    "This reverse update contains no randomness, so starting from the same initial noise always leads to the same reconstructed image.  \n",
-    "This is the deterministic version of diffusion sampling.\n",
-    "\n",
-    "\n",
-    "Let us first tests the denoising directly from gaussian noise:"
+    "No randomness is added in this process, so starting from the same initial noise always produces the same reconstructed image.  \n",
+    "This is the deterministic version of diffusion sampling.\n"
    ]
   },
   {
@@ -1061,15 +1063,12 @@
     "the reverse direction is not unique: the mapping from $\\mathbf{x}_t$ back to $\\mathbf{x}_{t-1}$ is not a single point but a whole probability distribution.  \n",
     "Adding a stochastic component in the reverse step lets us sample from this distribution instead of collapsing to a single trajectory.\n",
     "\n",
-    "In practice, we proceed exactly as in the deterministic case:  \n",
-    "the model predicts an estimate $\\widehat{\\mathbf{x}}_0$ from $\\mathbf{x}_t$ and $\\phi(t)$.  \n",
-    "We can still recover the effective noise $\\widehat{\\boldsymbol{\\varepsilon}}_t$ through the identity\n",
+    "In practice, we proceed exactly as in the deterministic case: the model predicts an estimate $\\widehat{\\mathbf{x}}_0$ from $\\mathbf{x}_t$ and $\\phi(t)$. We can still recover the effective noise $\\widehat{\\boldsymbol{\\varepsilon}}_t$ through the identity\n",
     "$$\n",
     "\\mathbf{x}_t = a(t)\\,\\widehat{\\mathbf{x}}_0 + b(t)\\,\\widehat{\\boldsymbol{\\varepsilon}}_t.\n",
     "$$\n",
     "\n",
-    "The difference comes in the update rule.  \n",
-    "Instead of jumping deterministically to\n",
+    "The difference comes in the update rule. Instead of jumping deterministically to\n",
     "$$\n",
     "\\mathbf{x}_{t-1}\n",
     "= a(t-1)\\,\\widehat{\\mathbf{x}}_0 + b(t-1)\\,\\widehat{\\boldsymbol{\\varepsilon}}_t,\n",
