--- a/TP13/Transformers.ipynb
+++ b/TP13/Transformers.ipynb
@@ -6,7 +6,7 @@
         "id": "t5rSlUkE7LID"
       },
       "source": [
-        "# TP 13: Sequence-to-Sequence modelling using transformers\n",
+        "# TP 13: Sequence-to-Sequence modeling using transformers\n",
         "\n",
         "In this exercise, we train a very small transformer architecture on an algorithmic toy task.\n",
         "\n",
@@ -41,7 +41,7 @@
       "source": [
         "# Part 1: Creating a sequence-to-sequence task\n",
         "\n",
-        "In language modelling, the primary application of transformers, we often aim to map a sequence of words to a second sequence of words.\n",
+        "In language modeling, the primary application of transformers, we often aim to map a sequence of words to a second sequence of words.\n",
         "Think about translating a sentence from one language to another, or ChatGPT creating an answer given a question by you.\n",
         "To make clear what the model sees when you translate a sentence, consider this example:\n",
         "$$\n",
@@ -205,7 +205,7 @@
       "source": [
         "In the following we define a \"mini\" transformer. The \"mini\" is to note that it does not have all the features as the transformer architecture when it was introduced, and to note that it would never be able to achieve SOTA results on common language tasks due to its limited capacity.\n",
         "\n",
-        "There are many details and specialities to the architecture and training modalities of transformers in the wild that are beyond the scope of this course, and that have also changed rapidly over the last few of years.\n",
+        "There are many details and specialties to the architecture and training modalities of Transformers in the wild that are beyond the scope of this course, and that have also changed rapidly over the last few years.\n",
         "\n",
         "The focus in this exercise is on developing a deep understanding of the heart of the transformer architecture that has been a constant, the dot product attention layer.\n",
         "\n",
@@ -256,8 +256,6 @@
         "id": "LtQVl6KMqsZC"
       },
       "source": [
-        "#### Question 2.2\n",
-        "\n",
         "In the sequence to sequence task, our input and our output is categorical (an element of a fixed set of choices). While you have seen categorical outputs in classification, we did not yet work with categorical inputs.\n",
         "\n",
         "So how can we input the token 'cat' to the transformer? The solution is to use one-hot encodings, i.e. vectors $\\mathbf v$ of length $V$. To represent the word 'cat' using a vector $\\mathbf v_{\\mathrm{cat}}$ we set the elements of the vector to zero except at position $i_{\\mathrm{cat}}$ where we set it to $1$.\n",
@@ -266,18 +264,7 @@
         "\n",
         "Often, one attributes a special name to this very first processing layer, it is called the `word embedding`. By multiplying $W_{\\mathrm{emb}}$ with a one-hot vector, one selects row of the matrix. Therefore, every row represents a single token, you can think of the row $[W_{\\mathrm{emb}}]_{i_{\\mathrm{cat}}}$ as a representation of cat in a $d$-dimensional space.\n",
         "\n",
-        "In torch, the process of one-hot encoding and multiplying by the embedding matrix is already implemented in the `nn.Embedding` module, which we now use to create the embedding for our histogram task.\n",
-        "\n",
-        "- Write out in latex, what the one-hot encoding for the token '3' would look like, if overall there are 10 different tokens in my alphabet."
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "x3vmCClHXhoE"
-      },
-      "source": [
-        "**Your answer here:**"
+        "In torch, the process of one-hot encoding and multiplying by the embedding matrix is already implemented in the `nn.Embedding` module, which we now use to create the embedding for our histogram task."
       ]
     },
     {
@@ -324,11 +311,11 @@
       "source": [
         "## Part 3: Building a Transformer: The Dot-Product Attention Layer\n",
         "\n",
-        "The dot product attention is defined as follows for the $Q, K, V \\in \\mathbb R^{d \\times d}$ and $X \\in \\mathbb R^{d \\times d}$, so that a row in the matrix is the embedded token $\\mathbf x_i = [x_{i1},x_{i2},\\cdots,x_{id}] \\in \\mathbb R^d$.\n",
+        "The dot product attention is defined as follows for the $Q, K, V \\in \\mathbb R^{d \\times d}$ and $X \\in \\mathbb R^{T \\times d}$, so that a row in the matrix is the embedded token $\\mathbf x_i = [x_{i1},x_{i2},\\cdots,x_{id}] \\in \\mathbb R^d$.\n",
         "The outcome of the attention layer at a specific token is then the linear combination of all other tokens, transformed according to the value matrix $V$.\n",
         "\n",
         "$$\n",
-        "\\text{AttentionLayer}(X; Q, K, V)_{i} =  A_{i}V \\mathbf X \\in \\mathbb R^d\n",
+        "\\text{AttentionLayer}(X; Q, K, V)_{i} =  A_{i} X V \\in \\mathbb R^d\n",
         "$$\n",
         "\n",
         "where $A_{i}$ is a $T$-dimensional vector representing a probability distribution over all other tokens. The value $a_{ij}$ represents how much attention is payed from token at position $i$ to position $j$.\n",
@@ -336,7 +323,7 @@
         "\n",
         "$$\n",
         "A_i = \\text{att\\_probs}(X; Q, K)_{i} = [a_{i1},a_{i2},\\cdots,a_{iT}] \n",
-        "= \\text{softmax}\\left(\\frac{(\\mathbf x_iQ) (XK)^T}{\\sqrt{d}}\\right) \\in \\mathbb R^T\n",
+        "= \\text{softmax}\\left(\\frac{(\\mathbf x_iQ) (XK)^\\top}{\\sqrt{d}}\\right) \\in \\mathbb R^T\n",
         "$$\n",
         "\n",
         "We transform the embedding $\\mathbf x_i$ into a query of dimension $d$ via the matrix $Q$, all the other tokens including itself get transformed to keys using $K$. The comparison between the $d$ keys and the query from token $i$ is via the dot-product (think cosine similarity, so a high value when the vectors representing keys and queries point in the same direction represent similar concepts).\n",
@@ -786,7 +773,7 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
+      "display_name": "foli25",
       "language": "python",
       "name": "python3"
     },
@@ -800,7 +787,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.12"
+      "version": "3.13.7"
     }
   },
   "nbformat": 4,
